--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URL = mongodb+srv://JiteshRU:#Jitesh18@cluster0.0qpp5.mongodb.net/social?retryWrites=true&w=majority&ssl=true
+MONGO_URL = mongodb+srv://Jiteshru:root123@project1.tphrwu6.mongodb.net/social?retryWrites=true&w=majority
